# windows_cc_exp

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  clang-tidy  cortex_decoder.cc  cortex_decoder.h  cortext_result.cc  cortext_result.h  hello.cc  hello.h  hello_main.cc  hello_test.cc  image_frame.cc  image_frame.h  preprocessing.cc  preprocessing.h
python/: convert_jpg_grayscale.py
